// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FloatingActionButton renders correct props with secondary buttons 1`] = `
<View
  style={
    {
      "bottom": 0,
      "direction": "ltr",
      "left": 0,
      "pointerEvents": "box-none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <View
    pointerEvents="box-none"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "bottom": 30,
            "height": 40,
            "position": "absolute",
            "top": undefined,
            "width": 40,
            "zIndex": 100,
          },
          {
            "right": 37,
          },
        ]
      }
      style={
        [
          {
            "bottom": 30,
            "height": 40,
            "position": "absolute",
            "top": undefined,
            "width": 40,
            "zIndex": 100,
          },
          {
            "right": 37,
          },
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityLabel="caption1"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 20,
            "elevation": 5,
            "height": 40,
            "justifyContent": "center",
            "opacity": 1,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 40,
            "width": 40,
          }
        }
        testID="FloatingAction$button0"
      >
        <View
          testId="icon"
        />
      </View>
    </View>
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "bottom": 30,
            "height": 40,
            "justifyContent": "center",
            "position": "absolute",
            "top": undefined,
            "zIndex": 100,
          },
          {
            "right": 92,
          },
        ]
      }
      pointerEvents="none"
      style={
        [
          {
            "bottom": 30,
            "height": 40,
            "justifyContent": "center",
            "position": "absolute",
            "top": undefined,
            "zIndex": 100,
          },
          {
            "right": 92,
          },
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "marginHorizontal": 15,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={{}}
        >
          caption1
        </Text>
      </View>
    </View>
  </View>
  <View
    pointerEvents="box-none"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "bottom": 30,
            "height": 40,
            "position": "absolute",
            "top": undefined,
            "width": 40,
            "zIndex": 100,
          },
          {
            "right": 37,
          },
        ]
      }
      style={
        [
          {
            "bottom": 30,
            "height": 40,
            "position": "absolute",
            "top": undefined,
            "width": 40,
            "zIndex": 100,
          },
          {
            "right": 37,
          },
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityLabel="caption2"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 20,
            "elevation": 5,
            "height": 40,
            "justifyContent": "center",
            "opacity": 1,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 40,
            "width": 40,
          }
        }
        testID="FloatingAction$button1"
      >
        <View
          testId="icon"
        />
      </View>
    </View>
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "bottom": 30,
            "height": 40,
            "justifyContent": "center",
            "position": "absolute",
            "top": undefined,
            "zIndex": 100,
          },
          {
            "right": 92,
          },
        ]
      }
      pointerEvents="none"
      style={
        [
          {
            "bottom": 30,
            "height": 40,
            "justifyContent": "center",
            "position": "absolute",
            "top": undefined,
            "zIndex": 100,
          },
          {
            "right": 92,
          },
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "marginHorizontal": 15,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={{}}
        >
          caption2
        </Text>
      </View>
    </View>
  </View>
  <View
    pointerEvents="box-none"
  >
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "bottom": 30,
            "height": 40,
            "position": "absolute",
            "top": undefined,
            "width": 40,
            "zIndex": 100,
          },
          {
            "right": 37,
          },
        ]
      }
      style={
        [
          {
            "bottom": 30,
            "height": 40,
            "position": "absolute",
            "top": undefined,
            "width": 40,
            "zIndex": 100,
          },
          {
            "right": 37,
          },
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        accessibilityLabel="caption3"
        accessibilityRole="button"
        accessibilityState={
          {
            "busy": undefined,
            "checked": undefined,
            "disabled": undefined,
            "expanded": undefined,
            "selected": undefined,
          }
        }
        accessibilityValue={
          {
            "max": undefined,
            "min": undefined,
            "now": undefined,
            "text": undefined,
          }
        }
        accessible={true}
        collapsable={false}
        focusable={true}
        onClick={[Function]}
        onResponderGrant={[Function]}
        onResponderMove={[Function]}
        onResponderRelease={[Function]}
        onResponderTerminate={[Function]}
        onResponderTerminationRequest={[Function]}
        onStartShouldSetResponder={[Function]}
        style={
          {
            "alignItems": "center",
            "backgroundColor": "#fff",
            "borderRadius": 20,
            "elevation": 5,
            "height": 40,
            "justifyContent": "center",
            "opacity": 1,
            "shadowColor": "#000",
            "shadowOffset": {
              "height": 5,
              "width": 0,
            },
            "shadowOpacity": 0.3,
            "shadowRadius": 3,
            "size": 40,
            "width": 40,
          }
        }
        testID="FloatingAction$button2"
      >
        <View
          testId="icon"
        />
      </View>
    </View>
    <View
      collapsable={false}
      jestAnimatedProps={
        {
          "value": {},
        }
      }
      jestAnimatedStyle={
        {
          "value": {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        }
      }
      jestInlineStyle={
        [
          {
            "bottom": 30,
            "height": 40,
            "justifyContent": "center",
            "position": "absolute",
            "top": undefined,
            "zIndex": 100,
          },
          {
            "right": 92,
          },
        ]
      }
      pointerEvents="none"
      style={
        [
          {
            "bottom": 30,
            "height": 40,
            "justifyContent": "center",
            "position": "absolute",
            "top": undefined,
            "zIndex": 100,
          },
          {
            "right": 92,
          },
          {
            "opacity": 0,
            "transform": [
              {
                "translateY": 0,
              },
            ],
          },
        ]
      }
    >
      <View
        style={
          {
            "marginHorizontal": 15,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={{}}
        >
          caption3
        </Text>
      </View>
    </View>
  </View>
  <View
    style={
      [
        {
          "bottom": 30,
          "height": 54,
          "position": "absolute",
          "top": undefined,
          "width": 54,
          "zIndex": 200,
        },
        {
          "right": 30,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Floating action button"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": false,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#e74c3c",
          "borderRadius": 27,
          "elevation": 5,
          "height": 54,
          "justifyContent": "center",
          "opacity": 1,
          "rippleColor": "rgba(0, 0, 0, 0.4)",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 5,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 3,
          "size": 54,
          "width": 54,
        }
      }
      testID="FloatingAction"
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
            },
          }
        }
        jestInlineStyle={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
            },
          ]
        }
        testID="FloatingAction$IconView"
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`FloatingActionButton renders correct props without secondary buttons 1`] = `
<View
  style={
    {
      "bottom": 0,
      "direction": "ltr",
      "left": 0,
      "pointerEvents": "box-none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <View
    style={
      [
        {
          "bottom": 30,
          "height": 54,
          "position": "absolute",
          "top": undefined,
          "width": 54,
          "zIndex": 200,
        },
        {
          "right": 30,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Floating action button"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": false,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#e74c3c",
          "borderRadius": 27,
          "elevation": 5,
          "height": 54,
          "justifyContent": "center",
          "opacity": 1,
          "rippleColor": "rgba(0, 0, 0, 0.4)",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 5,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 3,
          "size": 54,
          "width": 54,
        }
      }
      testID="FloatingAction"
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
            },
          }
        }
        jestInlineStyle={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
            },
          ]
        }
        testID="FloatingAction$IconView"
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`FloatingActionButton vertical position renders position bottom correctly 1`] = `
<View
  style={
    {
      "bottom": 0,
      "direction": "ltr",
      "left": 0,
      "pointerEvents": "box-none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <View
    style={
      [
        {
          "bottom": 30,
          "height": 54,
          "position": "absolute",
          "top": undefined,
          "width": 54,
          "zIndex": 200,
        },
        {
          "right": 30,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Floating action button"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": false,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#e74c3c",
          "borderRadius": 27,
          "elevation": 5,
          "height": 54,
          "justifyContent": "center",
          "opacity": 1,
          "rippleColor": "rgba(0, 0, 0, 0.4)",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 5,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 3,
          "size": 54,
          "width": 54,
        }
      }
      testID="FloatingAction"
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
            },
          }
        }
        jestInlineStyle={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
            },
          ]
        }
        testID="FloatingAction$IconView"
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`FloatingActionButton vertical position renders position top correctly 1`] = `
<View
  style={
    {
      "bottom": 0,
      "direction": "ltr",
      "left": 0,
      "pointerEvents": "box-none",
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 999,
    }
  }
>
  <View
    style={
      [
        {
          "bottom": undefined,
          "height": 54,
          "position": "absolute",
          "top": 30,
          "width": 54,
          "zIndex": 200,
        },
        {
          "right": 30,
        },
      ]
    }
  >
    <View
      accessibilityLabel="Floating action button"
      accessibilityRole="button"
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": false,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "alignItems": "center",
          "backgroundColor": "#e74c3c",
          "borderRadius": 27,
          "elevation": 5,
          "height": 54,
          "justifyContent": "center",
          "opacity": 1,
          "rippleColor": "rgba(0, 0, 0, 0.4)",
          "shadowColor": "#000",
          "shadowOffset": {
            "height": 5,
            "width": 0,
          },
          "shadowOpacity": 0.3,
          "shadowRadius": 3,
          "size": 54,
          "width": 54,
        }
      }
      testID="FloatingAction"
    >
      <View
        collapsable={false}
        jestAnimatedProps={
          {
            "value": {},
          }
        }
        jestAnimatedStyle={
          {
            "value": {
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
            },
          }
        }
        jestInlineStyle={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
          ]
        }
        style={
          [
            {
              "alignItems": "center",
              "flexShrink": 1,
              "justifyContent": "center",
            },
            {
              "transform": [
                {
                  "rotate": "0deg",
                },
              ],
            },
          ]
        }
        testID="FloatingAction$IconView"
      >
        <View
          testId="icon"
        />
      </View>
    </View>
  </View>
</View>
`;
